--- a/20230620_bookreviewcalendar/css/nav.css
+++ b/20230620_bookreviewcalendar/css/nav.css
@@ -31,6 +31,8 @@ header{
     top: 0;
     right: 0;
     left: 0;
+    z-index: 100;
+    /*hover 할 경우 헤더 위로 올라가는 문제 해결 (숫자가 클 수록 가장 앞에 나옴)*/
 }
 
 nav{
