--- a/20230620_bookreviewcalendar/css/review.css
+++ b/20230620_bookreviewcalendar/css/review.css
@@ -1,5 +1,7 @@
 main{
+    margin: 0 auto;
     margin-top: calc(44px + 100px);
+    width: calc(100% - 100px * 2);/*연산자 양 옆에는 무조건 띄어쓰기 사용*/
 }
 
 .container{
@@ -10,47 +12,74 @@ main{
 }
 .info-groups{
     flex-wrap: wrap;
+    margin: 0 40px;
+    gap: 40px;
 }
 .info-group{
     flex-direction: column;
+    gap: 40px;
 }
 .info{
     flex-direction: column;
 }
+.title,
+.author,
+.publisher,
+.read-date,
+.synopsis,
+.phrase{
+    font-size: 1.25rem;
+}
+.label{
+    color: #999;
+}
+.synopsis > input,
+.phrase > input{
+    width: 100%;
+    height: 2rem;
+}
 .reviews{
     flex-direction: column;
+    margin: 40px 0;
+    gap: 40px;
 }
 .review{
     flex-direction: column;
 }
 
 @media screen and (max-width: 540px){
+    main{
+        margin-top: calc(44px + 40px);
+    }
     .image-info-groups{
         flex-direction: column;
     }
+    .book-image{
+        margin: 0 auto; /*이미지가 있는 div 가운데*/
+    }
     .info-groups{
         flex-direction: column;
+        margin: 40px 0 0;
     }
+    
 }
 
 
 
 /*delete me*/
-main div{
+/* main div{
     border: 2px solid black;
-}
+} */
 .book-image{
-    background-color: bisque;
     width: 200px;
     min-width: 200px;
-    height: 400px;
+}
+.book-image > img{
+    display: block; /*이미지 아래 공백 문제 해*/
 }
 .info{
-    background-color: tomato;
-    width: 200px;
-    height: 100px;
+    /* height: 100px; */
 }
 .review{
-    background-color: khaki;
     height: 100px;
 }
