--- a/20230620_bookreviewcalendar/css/review.css
+++ b/20230620_bookreviewcalendar/css/review.css
@@ -14,10 +14,12 @@ main{
     flex-wrap: wrap;
     margin: 0 40px;
     gap: 40px;
+    min-width: 200px; /*문장 줄이기용 ...*/
 }
 .info-group{
     flex-direction: column;
     gap: 40px;
+    overflow: hidden;
 }
 .info{
     flex-direction: column;
@@ -29,6 +31,9 @@ main{
 .synopsis,
 .phrase{
     font-size: 1.25rem;
+    white-space: nowrap; /*...과 연관*/
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .label{
     color: #999;
