--- a/20230620_bookreviewcalendar/css/review.css
+++ b/20230620_bookreviewcalendar/css/review.css
@@ -10,6 +10,19 @@ main{
 .image-info-groups{
     /* flex-wrap: wrap;     태블릿 너비일 때 info-groups 전체가 먼저 wrap돼버려서 주석 처리*/
 }
+.book-image{
+    width: 200px;
+    min-width: 200px;
+}
+.book-image > img {
+    display: block; /*이미지 아래 공백 문제 해*/
+    border-radius: 8px;
+    box-shadow: 0 16px 32px #aaa;
+    transition: all 0.4s;
+}
+.book-image > img:hover {
+    transform: perspective(400px) rotateY(20deg);
+}
 .info-groups{
     flex-wrap: wrap;
     margin: 0 40px;
@@ -75,13 +88,6 @@ main{
 /* main div{
     border: 2px solid black;
 } */
-.book-image{
-    width: 200px;
-    min-width: 200px;
-}
-.book-image > img{
-    display: block; /*이미지 아래 공백 문제 해*/
-}
 .info{
     /* height: 100px; */
 }
