--- a/20230620_bookreviewcalendar/css/calendar.css
+++ b/20230620_bookreviewcalendar/css/calendar.css
@@ -34,11 +34,22 @@ main{
     display: grid;
     place-items: center; /* 글자 수평 수직 가운데로 */
 }
+/* 오늘의 요일로 이동 */
 .date.item:nth-child(1){
     background-color: aquamarine;
     display: grid;
     grid-column-start: 6;
 }
+/* 토요일 파란글자로 */
+.date.item:nth-child(7n+2){
+    color: blue;
+}
+
+/* 일요일 빨간글자로 */
+.date.item:nth-child(7n+3){
+    color: red;
+}
+
 .review.flex-container{
     display: flex;
     flex-direction: column;
